--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.129.0",
     "fastmcp>=2.14.5",
+    "httpx>=0.28.1",
+    "uvicorn>=0.41.0",
     "yt-dlp>=2026.2.4",
 ]
